# AGV-F1Tenth-Controls

./: README.md
Pure_Pursuit/PP_Group_1/: test.txt
Pure_Pursuit/PP_Group_1/f1tenth_lab6_template/: README.md
Pure_Pursuit/PP_Group_1/f1tenth_lab6_template/pure_pursuit/: CMakeLists.txt
Pure_Pursuit/PP_Group_1/f1tenth_lab6_template/pure_pursuit/src/: pp_spielberg_min_curve.cpp  pure_pursuit_node.cpp  waypoints.csv  waypoints2.csv  waypoints3.csv
Pure_Pursuit/PP_Group_2/: Purepursuit_ON.py
Pure_Pursuit/PP_Group_2/pure_pursuit/: setup.py
Pure_Pursuit/PP_Group_2/pure_pursuit/scripts/: odometry_waypoint.py  purepursuit_109.py
Pure_Pursuit/PP_Group_3/pure_pursuit/scripts/: marker_aruco.json  new.py  pure_pursuit_node.py  waypoint_storage.py
Stanley/St_Group_1/: package.xml  setup.cfg  setup.py
Stanley/St_Group_1/launch/: main_launch.py
Stanley/St_Group_1/my_stanley_controller/: package.xml  setup.cfg  setup.py
Stanley/St_Group_1/my_stanley_controller/my_stanley_controller/: stanley.py
Stanley/St_Group_1/my_stanley_controller/resource/: waypoints.csv
Stanley/St_Group_1/stanley_controller/: stanley_controller.py  stanley_controller_backup.py
Stanley/St_Group_1/stuff/: stuff3.py
Stanley/St_Group_1/waypoint_recorder/: CMakeLists.txt  package.xml
Stanley/St_Group_1/waypoint_recorder/src/: waypoint_recorder.cpp
Stanley/St_Group_2/my_stanley_controller/resource/: Spielberg_raceline.csv  waypoints.csv
Stanley/St_Group_2/stuff/: finalstuff.py  stuff.py  stuff2.py  stuff4.py  stuff5.py  stuff6.py  stuff7.py
Stanley/St_Group_2/waypoint_recorder/src/: waypoint_recorder.cpp
Stanley/St_Group_3/: setup.cfg  setup.py
Stanley/St_Group_3/f1tenth_stanley_controller/: controller_node.py
Stanley/St_Group_3/resource/: waypoints.csv
Stanley/St_Group_3/scripts/: controller_node.py  get_waypoints.py
log/: latest_build
