[develop]
script-dir=$base/lib/f1tenth_stanley_controller

[install]
install-scripts=$base/lib/f1tenth_stanley_controller

[options]
packages = find:
python_requires = >=3.8
install_requires =
    setuptools
    
[options.entry_points]
console_scripts =
    my_node = my_python_package.scripts.my_node:main